# pySigma-backend-dictquery

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  __init__.py  config.ini  dictquery.py  print-coverage.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  test.yml
sigma/backends/dictquery/: __init__.py  dictquery.py
tests/: test_backend_dictquery.py
