[tool.poetry]
name = "pySigma-backend-dictquery"
version = "0.1.3"
description = "pySigma dictquery backend"
authors = ["Unqork Security TDR <security-tdr@unqork.com>"]
license = "MIT"
repository = "https://github.com/tbd/pySigma-backend-dictquery"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.0.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
